more link (video, ppt)

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 			<h1><img src="figures/logo.png" style="max-width:75%;"></h1>
 			<a href="https://www.aclweb.org/anthology/2021.naacl-main.224.pdf" class="btn">Paper</a>
 			<a href="https://github.com/utahnlp/knowledge_infotabs" class="btn">Code</a>
-			<a href="https://infotabs.github.io/" class="btn">Data</a>
+			<a href="https://infotabs.github.io/" class="btn">InfoTabS Data</a>
+			<a href="https://screencast-o-matic.com/watch/crhlnpVfYcG" class="btn">Video</a>
+			<a href="https://vgupta123.github.io/docs/NAACL_2021_Poster.pdf" class="btn">Poster</a>
+			<a href="https://docs.google.com/presentation/d/1MfkHFcfnoCiBY9ftp8Uw_uosz_Xo5UQNkZEwJZ-HS10/edit?usp=sharing" class="btn">PPT</a>
 		</section>
 		<section class="main-content">
 			<h1>Incorporating External Knowledge to Enhance Tabular Reasoning</h1>
